# NiftiReader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: DrawDialog.cpp  DrawDialog.hpp  Image.cpp  Image.hpp  ImageContainer.cpp  ImageContainer.hpp  Nifti.cpp  Nifti.hpp  NiftiExceptions.hpp  RenderArea.cpp  RenderArea.hpp  Voxel.cpp  Voxel.hpp  Window.cpp  Window.hpp
src/utils/: Matrix.hpp  MatrixException.hpp  NiftiExceptions.hpp
